# BC_Project

./: README.md  上传流程.txt
阀体控制器/2026.05.09/H743_VS_GCC_IDE/: .mxproject  CMakeLists.txt  H743_VS_GCC_IDE.ioc
阀体控制器/2026.05.09/H743_VS_GCC_IDE/Core/Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
阀体控制器/2026.05.09/H743_VS_GCC_IDE/Core/Src/: dma.c  gpio.c  i2c.c  rtc.c  spi.c  usart.c
阀体控制器/2026.05.09/H743_VS_GCC_IDE/LWIP/App/: lwip.c
阀体控制器/2026.05.09/H743_VS_GCC_IDE/UserCode/Drivers/Clock/: rtc_clock.h  rtc_cluck.c
阀体控制器/2026.05.09/H743_VS_GCC_IDE/UserCode/Drivers/Encoder/: Encoder.c
阀体控制器/2026.05.09/H743_VS_GCC_IDE/UserCode/Drivers/Motor/: motor_zdt.h
阀体控制器/2026.05.09/H743_VS_GCC_IDE/UserCode/Drivers/Sht40/: sht40.c
阀体控制器/2026.05.09/H743_VS_GCC_IDE/UserCode/Logic/: User_Assert.c  mbif.c  mbif.h  msg_queue.h  oled_page.c  oled_task.h  running_logic.c  running_logic.h  syncif.c  syncif.h
阀体控制器/2026.05.09/H743_VS_GCC_IDE/cmake/stm32cubemx/: CMakeLists.txt
阀体控制器/2026.05.11/H743_VS_GCC_IDE/: CMakeLists.txt  CMakePresets.json  STM32H743XG_FLASH.ld
阀体控制器/2026.05.11/H743_VS_GCC_IDE/Core/Src/: freertos.c  main.c
阀体控制器/2026.05.11/H743_VS_GCC_IDE/UserCode/Drivers/Buzzer/: buzzer.h
阀体控制器/2026.05.11/H743_VS_GCC_IDE/UserCode/Drivers/Encoder/: Encoder.h
阀体控制器/2026.05.11/H743_VS_GCC_IDE/UserCode/Drivers/Motor/: bsp_fdcan.h  motor_zdt.c
阀体控制器/2026.05.11/H743_VS_GCC_IDE/UserCode/Drivers/Sht40/: sht40.h
阀体控制器/2026.05.11/H743_VS_GCC_IDE/UserCode/Logic/: User_Assert.h  mbif.c  mbif.h  running_logic.c  running_logic.h  syncif.c  syncif.h  unit_test.c
阀体控制器/2026.05.11/H743_VS_GCC_IDE/cmake/stm32cubemx/: CMakeLists.txt
阀体控制器/2026.05.20/: 说明.txt
阀体控制器/2026.05.20/H743_VS_GCC_IDE/: .mxproject  CMakeLists.txt  H743_VS_GCC_IDE.ioc  Makefile  STM32H743XG_FLASH.ld  export_code.bat  startup_stm32h743xx.s  toolchain-arm.cmake
阀体控制器/2026.05.20/H743_VS_GCC_IDE/Core/Inc/: main.h
阀体控制器/2026.05.20/H743_VS_GCC_IDE/Core/Src/: fdcan.c  freertos.c  main.c  stm32h7xx_it.c
阀体控制器/2026.05.20/H743_VS_GCC_IDE/LWIP/App/: lwip.c
阀体控制器/2026.05.20/H743_VS_GCC_IDE/UserCode/Drivers/Buzzer/: buzzer.c
阀体控制器/2026.05.20/H743_VS_GCC_IDE/UserCode/Drivers/ETH/: HMAC-SHA256.c  HMAC-SHA256.h  net_comm_task.c  net_comm_task.h
阀体控制器/2026.05.20/H743_VS_GCC_IDE/UserCode/Drivers/Motor/: bsp_fdcan.c
阀体控制器/2026.05.20/H743_VS_GCC_IDE/UserCode/Logic/: msg_queue.c  oled_page.h  oled_task.c  syncif.c  syncif.h
阀体控制器/2026.05.20/H743_VS_GCC_IDE/cmake/stm32cubemx/: CMakeLists.txt
